--- a/console/console.vcxproj
+++ b/console/console.vcxproj
@@ -69,22 +69,22 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Libraries\boost\;C:\Libraries\SDL\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Libraries\boost\;C:\Libraries\SDL\include;.\[libs]\;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Libraries\boost\stage\lib\;C:\Libraries\SDL\lib\x86\Debug;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)$(Configuration)\bin\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>C:\Libraries\boost\;C:\Libraries\SDL\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Libraries\boost\;C:\Libraries\SDL\include;.\[libs]\;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Libraries\boost\stage\lib\;C:\Libraries\SDL\lib\x86\Release;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)$(Configuration)\bin\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Libraries\boost\;C:\Libraries\SDL\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Libraries\boost\;C:\Libraries\SDL\include;.\[libs]\;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Libraries\boost\stage\lib\;C:\Libraries\SDL\lib\x64\Debug;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\bin\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\Libraries\boost\;C:\Libraries\SDL\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Libraries\boost\;C:\Libraries\SDL\include;.\[libs]\;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Libraries\boost\stage\lib\;C:\Libraries\SDL\lib\x64\Release;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\bin\</OutDir>
   </PropertyGroup>
@@ -150,11 +150,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
-    <ClInclude Include="game\common.h" />
     <ClInclude Include="game_base.h" />
     <ClInclude Include="sdl_utils.h" />
     <ClInclude Include="sdl_log.h" />
     <ClInclude Include="sdl_ptr.h" />
+    <ClInclude Include="[libs]\game\common.h" />
+    <ClInclude Include="[libs]\simple_ini\SimpleIni.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="game.cpp" />
